# timezonemap

./: .bzrignore  .gitignore  ChangeLog  Makefile.am  autogen.sh  configure.ac  testtz.py  testtz.sh
debian/: changelog  control  gir1.2-timezonemap-1.0.install  libtimezonemap-data.install  libtimezonemap1-dev.install  libtimezonemap1.install  rules
glade/: Makefile.am  TimezoneMap.xml
src/: Makefile.am  cc-timezone-location.c  cc-timezone-map.c  cc-timezone-map.h  test-clickability.c  test-timezone.c  timezone-completion.c  timezonemap.pc.in  tz.c  tz.h
src/data/: README  admin1Codes.txt  citiesExtra.txt
